Implement unit tests for IP functions

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -588,6 +588,7 @@ if (ENABLE_TESTS)
     )
 
     target_link_libraries(unit_tests_dbms PRIVATE
+        ch_contrib::gmock_all
         ch_contrib::gtest_all
         ch_contrib::gmock_all
         clickhouse_functions
