--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -12,19 +12,8 @@ on: # yamllint disable-line rule:truthy
     branches:
       - 'master'
 jobs:
-  # PythonUnitTests:
-  #   runs-on: [self-hosted, style-checker]
-  #   steps:
-  #     - name: Check out repository code
-  #       uses: ClickHouse/checkout@v1
-  #       with:
-  #         clear-repository: true
-  #     - name: Python unit tests
-  #       run: |
-  #         cd "$GITHUB_WORKSPACE/tests/ci"
-  #         python3 -m unittest discover -s . -p '*_test.py'
   DockerHubPushAarch64:
-    runs-on: [self-hosted, style-checker]
+    runs-on: [self-hosted, style-checker-aarch64]
     steps:
       - name: Check out repository code
         uses: ClickHouse/checkout@v1
@@ -40,7 +29,7 @@ jobs:
           name: changed_images_aarch64
           path: ${{ runner.temp }}/docker_images_check/changed_images_aarch64.json
   DockerHubPushAmd64:
-    runs-on: [self-hosted, style-checker]
+    runs-on: [self-hosted, builder]
     steps:
       - name: Check out repository code
         uses: ClickHouse/checkout@v1
@@ -57,7 +46,7 @@ jobs:
           path: ${{ runner.temp }}/docker_images_check/changed_images_amd64.json
   DockerHubPush:
     needs: [DockerHubPushAmd64, DockerHubPushAarch64]
-    runs-on: [self-hosted, style-checker]
+    runs-on: [self-hosted, builder]
     steps:
       - name: Check out repository code
         uses: ClickHouse/checkout@v1
